--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     Hello World 2!
     Hello World 3!
     <h1>
-        Hi, VOVA
+        Hi, VOV
     </h1>
+    <h2>
+        Hi, DIMA
+    </h2>
 </body>
 </html>
